--- a/environment.yml
+++ b/environment.yml
@@ -4,9 +4,160 @@ channels:
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - python=3.12
-  - matplotlib
-  - numpy
-  - pandas
-  - loguru
+  - blas=1.0=openblas
+  - bottleneck=1.4.2=py312ha86b861_0
+  - brotli-python=1.0.9=py312h313beb8_9
+  - bzip2=1.0.8=h80987f9_6
+  - ca-certificates=2025.2.25=hca03da5_0
+  - contourpy=1.3.1=py312h48ca7d4_0
+  - cycler=0.11.0=pyhd3eb1b0_0
+  - cyrus-sasl=2.1.28=h9131b1a_1
+  - expat=2.6.4=h313beb8_0
+  - fonttools=4.55.3=py312h80987f9_0
+  - freetype=2.12.1=h1192e45_0
+  - iniconfig=1.1.1=pyhd3eb1b0_0
+  - jpeg=9e=h80987f9_3
+  - jsonschema=4.23.0=py312hca03da5_0
+  - jupyter_core=5.7.2=py312hca03da5_0
+  - kiwisolver=1.4.8=py312h313beb8_0
+  - krb5=1.20.1=hf3e1bf2_1
+  - lcms2=2.16=he93ba84_0
+  - lerc=4.0.0=h313beb8_0
+  - libcxx=14.0.6=h848a8c0_0
+  - libdeflate=1.22=h80987f9_0
+  - libedit=3.1.20230828=h80987f9_0
+  - libffi=3.4.4=hca03da5_1
+  - libgfortran=5.0.0=11_3_0_hca03da5_28
+  - libgfortran5=11.3.0=h009349e_28
+  - libopenblas=0.3.21=h269037a_0
+  - libpng=1.6.39=h80987f9_0
+  - libpq=17.4=h02f6b3c_0
+  - libtiff=4.5.1=hc9ead59_1
+  - libwebp-base=1.3.2=h80987f9_1
+  - llvm-openmp=14.0.6=hc6e5704_0
+  - loguru=0.7.2=py312hca03da5_1
+  - lz4-c=1.9.4=h313beb8_1
+  - matplotlib=3.10.0=py312hca03da5_0
+  - matplotlib-base=3.10.0=py312h7ef442a_0
+  - nbformat=5.10.4=py312hca03da5_0
+  - ncurses=6.4=h313beb8_0
+  - numexpr=2.10.1=py312h5d9532f_0
+  - numpy=2.2.4=py312hcef5695_0
+  - numpy-base=2.2.4=py312hb71ad10_0
+  - openjpeg=2.5.2=h54b8e55_0
+  - openldap=2.6.4=he7ef289_0
+  - openssl=3.0.16=h02f6b3c_0
+  - packaging=24.2=py312hca03da5_0
+  - pandas=2.2.3=py312hcf29cfe_0
+  - pillow=11.1.0=py312h84e58ab_0
+  - pip=25.0=py312hca03da5_0
+  - pluggy=1.5.0=py312hca03da5_0
+  - psycopg2=2.9.9=py312h80987f9_1
+  - pyparsing=3.2.0=py312hca03da5_0
+  - pytest=8.3.4=py312hca03da5_0
+  - python=3.12.9=h99e199e_0
+  - python-dateutil=2.9.0post0=py312hca03da5_2
+  - python-fastjsonschema=2.20.0=py312hca03da5_0
+  - python-tzdata=2023.3=pyhd3eb1b0_0
+  - pytz=2024.1=py312hca03da5_0
+  - readline=8.2=h1a28f6b_0
+  - scipy=1.15.2=py312h14fe6a6_1
+  - seaborn=0.13.2=py312hca03da5_2
+  - setuptools=72.1.0=py312hca03da5_0
+  - six=1.16.0=pyhd3eb1b0_1
+  - sqlite=3.45.3=h80987f9_0
+  - tk=8.6.14=h6ba3021_0
+  - tornado=6.4.2=py312h80987f9_0
+  - traitlets=5.14.3=py312hca03da5_0
+  - tzdata=2025a=h04d1e81_0
+  - unicodedata2=15.1.0=py312h80987f9_1
+  - wheel=0.45.1=py312hca03da5_0
+  - xz=5.6.4=h80987f9_1
+  - zlib=1.2.13=h18a0788_1
+  - zstd=1.5.6=hfb09047_0
+  - pip:
+      - anyio==4.9.0
+      - appnope==0.1.4
+      - argon2-cffi==23.1.0
+      - argon2-cffi-bindings==21.2.0
+      - arrow==1.3.0
+      - asttokens==3.0.0
+      - async-lru==2.0.5
+      - attrs==25.3.0
+      - babel==2.17.0
+      - beautifulsoup4==4.13.3
+      - bleach==6.2.0
+      - certifi==2025.1.31
+      - cffi==1.17.1
+      - charset-normalizer==3.4.1
+      - comm==0.2.2
+      - debugpy==1.8.13
+      - decorator==5.2.1
+      - defusedxml==0.7.1
+      - executing==2.2.0
+      - fastjsonschema==2.21.1
+      - fqdn==1.5.1
+      - h11==0.14.0
+      - httpcore==1.0.7
+      - httpx==0.28.1
+      - idna==3.10
+      - ipykernel==6.29.5
+      - ipython==9.0.2
+      - ipython-pygments-lexers==1.1.1
+      - isoduration==20.11.0
+      - jedi==0.19.2
+      - jinja2==3.1.6
+      - json5==0.10.0
+      - jsonpointer==3.0.0
+      - jsonschema-specifications==2024.10.1
+      - jupyter-client==8.6.3
+      - jupyter-events==0.12.0
+      - jupyter-lsp==2.2.5
+      - jupyter-server==2.15.0
+      - jupyter-server-terminals==0.5.3
+      - jupyterlab==4.3.6
+      - jupyterlab-pygments==0.3.0
+      - jupyterlab-server==2.27.3
+      - markupsafe==3.0.2
+      - matplotlib-inline==0.1.7
+      - mistune==3.1.3
+      - nbclient==0.10.2
+      - nbconvert==7.16.6
+      - nest-asyncio==1.6.0
+      - notebook==7.3.3
+      - notebook-shim==0.2.4
+      - overrides==7.7.0
+      - pandocfilters==1.5.1
+      - parso==0.8.4
+      - pexpect==4.9.0
+      - platformdirs==4.3.7
+      - prometheus-client==0.21.1
+      - prompt-toolkit==3.0.50
+      - psutil==7.0.0
+      - ptyprocess==0.7.0
+      - pure-eval==0.2.3
+      - pycparser==2.22
+      - pygments==2.19.1
+      - python-json-logger==3.3.0
+      - pyyaml==6.0.2
+      - pyzmq==26.3.0
+      - referencing==0.36.2
+      - requests==2.32.3
+      - rfc3339-validator==0.1.4
+      - rfc3986-validator==0.1.1
+      - rpds-py==0.24.0
+      - send2trash==1.8.3
+      - sniffio==1.3.1
+      - soupsieve==2.6
+      - stack-data==0.6.3
+      - terminado==0.18.1
+      - tinycss2==1.4.0
+      - types-python-dateutil==2.9.0.20241206
+      - typing-extensions==4.13.0
+      - uri-template==1.3.0
+      - urllib3==2.3.0
+      - wcwidth==0.2.13
+      - webcolors==24.11.1
+      - webencodings==0.5.1
+      - websocket-client==1.8.0
 prefix: /opt/anaconda3/envs/ML_engineering_KC
